1: JQuery validation integration | Done 2: Sweet alert integration | Done

--- a/index.html
+++ b/index.html
@@ -9,14 +9,27 @@
     <meta name="keywords" content="greenHKMarket, organic products, sustainable products, UK, eco-friendly, green lifestyle">
     <link rel="icon" href="assets/images/theme-logo/favicon/favicon-32x32.png" type="image/x-icon">
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <main>
+        <div class="page-wrapper">
+            <header>
+                <nav>
+                    
+                </nav>
+            </header>
+            <footer>
+
+            </footer>
+        </div>
+    </main>
     <script src="assets/javascript/jquery-3.7.0.min.js"></script>
     <script src="assets/javascript/bootstrap/bootstrap.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
     <script src="assets/javascript/main.js"></script>
 </body>
 </html>
