--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="assets/images/theme-logo/favicon/favicon-32x32.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Satisfy&family=Ubuntu&family=Work+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Belanosima&family=Roboto+Slab&family=Satisfy&family=Ubuntu&family=Work+Sans&display=swap" rel="stylesheet">
   <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
@@ -84,7 +84,93 @@
         </nav>
       </header>
       <footer>
+        <div class="container-fluid">
+          <div class="row go-to-top-row">
+              <a href="javascript:void(0)" id="goToTop">
+                <div class="col-12 col-md-12 col-lg-12">
+                  Back to top
+                </div>
+               </a>
+          </div>
 
+          <div class="row information-row">
+            <div class="col-12 col-md-3 col-lg-3 company-col">
+              <img src="assets/images/theme-logo/logo.png" class="img-fluid" alt="">
+              <p>Green HK Market is a leading online platform dedicated to serving environmentally-conscious consumers in the UK. With a passion for promoting sustainable living, we strive to offer a diverse range of high-quality organic and sustainable products.</p>
+            </div>
+            <div class="col-12 col-md-3 col-lg-3 links-col">
+              <h5>Links</h5>
+              <hr>
+              <ul class="list-group">
+                <li class="list-group-item"><a href="index.html" class="active">Home</a></li>
+                <li class="list-group-item"><a href="javascript:void(0)">Shop</a></li>
+                <li class="list-group-item"><a href="javascript:void(0)">About</a></li>
+                <li class="list-group-item"><a href="javascript:void(0)">Blog</a></li>
+                <li class="list-group-item"><a href="javascript:void(0)">Contact us</a></li>
+              </ul>
+            </div>
+            <div class="col-12 col-md-3 col-lg-3 contact-col">
+              <h5>Contact information</h5>
+              <hr>
+              <table class="table">
+                <tr>
+                  <td><p><span><i class="fa-solid fa-map-location"></i></span> Address:</p></td>
+                  <td><Address>Conduit Lane, Oldbury <br> WV16 5BU Shropshire</Address></td>
+                </tr>
+                <tr>
+                  <td><p><span><i class="fa-solid fa-envelope"></i></span> Email:</p></td>
+                  <td><a href="mailto:greenhkmart@gmail.com">greenhkmart@gmail.com</a></td>
+                </tr>
+                <tr>
+                  <td><p><span><i class="fa-solid fa-phone"></i> Phone:</p></td>
+                  <td><a href="tel:+447388810280">+44 7388 810280</a></td>
+                </tr>
+              </table>
+            </div>
+            <div class="col-12 col-md-3 col-lg-3 newsletter-col">
+              <h5>Newsletter</h5>
+              <hr>
+              <div class="row">
+                <p>SIGN UP FOR OUR NEWSLETTER</p>
+                <div class="col-12 col-md-12">
+                  <form action="javascript:void(0)" method="#" autocomplete="off">
+                    <div class="input-group mb-3">
+                      <input type="text" class="form-control" placeholder="Email address" aria-label="Email addres" aria-describedby="news-letter-input">
+                      <a href="javascript:void(0)" class="btn btn-primary" id="news-letter-input"><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      </a>
+                    </div>      
+                  </form>
+                </div>
+              </div>
+              
+              <div class="row social-media-row">
+                <div class="col-12 col-md-12">
+                  <ul class="list-group list-group-horizontal">
+                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-instagram"></i></a></li>
+                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-youtube"></i></a></li>
+                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-twitter"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr class="bg-light text-light">
+          <div class="row copyright-row justify-content-center">
+            <div class="col-12 col-md-4 col-lg-4 m-auto copyright-col">
+              <p>All rights reserved by GreenHKMarket &copy; <span id="copyright_year"></span></p>
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 m-auto payment-gateway-col">
+              <img src="assets/images/others/payment_gateway.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
+              <ul class="list-group list-group-horizontal m-auto  ">
+                <li class="list-group-item"><a href="javascript:void(0)">Privacy policy</a></li>
+                <li class="list-group-item"><a href="javascript:void(0)">Terms and conditions</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </footer>
     </div>
   </main>
