--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />
 </head>
 <body>
+  <!-- Loader -->
+  <div id="loader-wrapper">
+    <div id="loader">
+      <img src="assets/images/theme-logo/logo.png" alt="Company Logo">
+      <div class="loader-text">Loading...</div>
+    </div>
+  </div>
   <main>
     <div class="page-wrapper">
       <header>
