--- a/pages/blank-page.html
+++ b/pages/blank-page.html
@@ -8,20 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="GreenHKMarket - Organic and Sustainable Products in the UK">
   <meta name="keywords" content="greenHKMarket, organic products, sustainable products, UK, eco-friendly, green lifestyle">
-  <link rel="icon" href="assets/images/theme-logo/favicon/favicon-32x32.png" type="image/x-icon">
+  <link rel="icon" href="../assets/images/theme-logo/favicon/favicon-32x32.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Belanosima&family=Roboto+Slab&family=Satisfy&family=Ubuntu&family=Work+Sans&display=swap" rel="stylesheet">
-  <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />
 </head>
 <body>
   <!-- Loader -->
   <div id="loader-wrapper">
     <div id="loader">
-      <img src="assets/images/theme-logo/logo.png" alt="GreenHKMarket Logo">
+      <img src="../assets/images/theme-logo/logo.png" alt="GreenHKMarket Logo">
       <div class="loader-text">Loading...</div>
     </div>
   </div>
@@ -30,8 +30,8 @@
       <header>
         <nav class="navbar navbar-expand-lg ">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-              <img src="assets/images/theme-logo/logo.png" class="img-fluid" alt="GreenHKMarket Logo">
+            <a class="navbar-brand" href="../index.html">
+              <img src="../assets/images/theme-logo/logo.png" class="img-fluid" alt="GreenHKMarket Logo">
             </a>
             <div class="navbar-toggler" onclick="navbarToggle(this)" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="javascript:void(0)" role="button" data-bs-toggle="dropdown"
@@ -102,14 +102,14 @@
 
           <div class="row information-row">
             <div class="col-12 col-md-3 col-lg-3 company-col">
-              <img src="assets/images/theme-logo/logo.png" class="img-fluid" alt="GreenHKMarket Logo">
+              <img src="../assets/images/theme-logo/logo.png" class="img-fluid" alt="GreenHKMarket Logo">
               <p>Green HK Market is a leading online platform dedicated to serving environmentally-conscious consumers in the UK. With a passion for promoting sustainable living, we strive to offer a diverse range of high-quality organic and sustainable products.</p>
             </div>
             <div class="col-12 col-md-3 col-lg-3 links-col">
               <h5>Links</h5>
               <hr>
               <ul class="list-group">
-                <li class="list-group-item"><a href="index.html" class="active">Home</a></li>
+                <li class="list-group-item"><a href="../index.html" class="active">Home</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Shop</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">About</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Blog</a></li>
@@ -168,7 +168,7 @@
               <p>All rights reserved by GreenHKMarket &copy; <span id="copyright_year"></span></p>
             </div>
             <div class="col-12 col-md-4 col-lg-4 m-auto payment-gateway-col">
-              <img src="assets/images/others/payment_gateway.png" class="img-fluid" alt="GreenHKMarket Logo">
+              <img src="../assets/images/others/payment_gateway.png" class="img-fluid" alt="GreenHKMarket Logo">
             </div>
             <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
               <ul class="list-group list-group-horizontal m-auto  ">
@@ -181,11 +181,11 @@
       </footer>
     </div>
   </main>
-  <script src="assets/javascript/jquery-3.7.0.min.js"></script>
-  <script src="assets/javascript/bootstrap/bootstrap.bundle.js"></script>
+  <script src="../assets/javascript/jquery-3.7.0.min.js"></script>
+  <script src="../assets/javascript/bootstrap/bootstrap.bundle.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
-  <script src="assets/javascript/main.js"></script>
+  <script src="../assets/javascript/main.js"></script>
 </body>
 
 </html>
