--- a/index.html
+++ b/index.html
@@ -90,6 +90,47 @@
           </div>
         </nav>
       </header>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/banner-images/organic-vegetables.png" class="img-fluid" alt="organic-vegetables">
+            <div class="carousel-caption">
+              <h5>Organic Vegetables</h5>
+              <p>Enjoy fresh and healthy organic vegetables for a balanced diet.</p>
+              <a href="javascript:void(0)" class="btn btn-primary">Explore products</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/banner-images/eco-products.png" class="img-fluid" alt="eco-friendly-products">
+            <div class="carousel-caption">
+              <h5>Eco Friendly Products</h5>
+              <p>Explore a range of eco-friendly products for a sustainable lifestyle.</p>
+              <a href="javascript:void(0)" class="btn btn-primary">Explore products</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/banner-images/organic-beauty-product.png" class="img-fluid" alt="organic-beauty-product">
+            <div class="carousel-caption">
+              <h5>Organic Beauty Product</h5>
+              <p>Experience the goodness of organic beauty products for a natural routine.</p>
+              <a href="javascript:void(0)" class="btn btn-primary">Explore products</a>   
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
       <footer>
         <div class="container-fluid">
           <div class="row go-to-top-row">
@@ -99,7 +140,6 @@
                 </div>
                </a>
           </div>
-
           <div class="row information-row">
             <div class="col-12 col-md-3 col-lg-3 company-col">
               <img src="assets/images/theme-logo/logo.png" class="img-fluid" alt="GreenHKMarket Logo">
