1: Advertisement section | Done

--- a/index.html
+++ b/index.html
@@ -131,6 +131,38 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
+      <div class="container-fluid advertisement-container">
+        <div class="row large-ad-row">
+          <div class="col-12 col-md-6 col-lg-6 large-ad">
+            <img src="assets/images/advertisement-images/antipodes-lime-caviar.png" class="img-fluid" alt="antipodes-lime-caviar">
+            <div class="content">
+              <h4>Best products for <br><span class="stylish-font">health</span> and <span class="stylish-font">wellness.</span></h4>
+              <a href="javascript:void(0)" class="btn btn-primary">Shop now</a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6">
+              <div class="row small-ad-row">
+                <div class="col-12 col-md-12 col-lg-12 small-ad-col ad-right-side p-0">
+                  <img src="assets/images/advertisement-images/eco-home.png" class="img-fluid" alt="eco-home">
+                  <div class="content">
+                    <h4>Up to <span class="stylish-font">17%</span> off on <br> <span class="stylish-font"> friendly </span> home products.</h4>
+                    <a href="javascript:void(0)" class="btn btn-primary">Shop now</a>
+                  </div>
+                </div>
+              </div>
+              <div class="row small-ad-row">
+                <div class="col-12 col-md-12 col-lg-12 small-ad-col ad-left-side p-0">
+                  <img src="assets/images/advertisement-images/organic-health.png" class="img-fluid" alt="organic-health">
+                  <div class="content">
+                    <h4>Up to 50% off on <br> <span class="stylish-font">organic</span> and <span class="stylish-font">health</span> products.</h4>
+                    <a href="javascript:void(0)" class="btn btn-primary">Shop now</a>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
       <footer>
         <div class="container-fluid">
           <div class="row go-to-top-row">
