1: Common product design | Done 2: Featured product section | Done

--- a/index.html
+++ b/index.html
@@ -163,6 +163,301 @@
           </div>
         </div>
       </div>
+
+      <div class="container-fluid common-product-container">
+        <div class="row">
+          <h2 class="heading text-center">Featured products</h2>
+          <div class="col-6 col-md-3 col-lg-3">
+            <div class="product-item">
+              <div class="product-img m-auto">
+                <img src="assets/images/product-images/1.png" class="img-fluid " alt="product-image">
+              </div>
+              <div class="product-badge">
+                <span class="badge">New</span>
+              </div>
+              <div class="product-action">
+                <ul>
+                  <li><a href="javascript:void(0)"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+
+              <div class="product-content">
+                <div class="product-rating">
+                  <ul>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star-half" aria-hidden="true"></i></li>
+                  </ul>
+                </div>
+                <div class="product-title">
+                  <a href="javascript:void(0)">Carrots Group Scal</a>
+                </div>
+                <div class="product-price">
+                  <span class="product-current-price">£20</span>
+                  <span class="product-deal-price">£20</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-3">
+            <div class="product-item">
+              <div class="product-img m-auto">
+                <img src="assets/images/product-images/2.png" class="img-fluid " alt="product-image">
+              </div>
+              <div class="product-badge">
+                <span class="badge">New</span>
+              </div>
+              <div class="product-action">
+                <ul>
+                  <li><a href="javascript:void(0)"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+
+              <div class="product-content">
+                <div class="product-rating">
+                  <ul>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star-half" aria-hidden="true"></i></li>
+                  </ul>
+                </div>
+                <div class="product-title">
+                  <a href="javascript:void(0)">organic cherries 1KG</a>
+                </div>
+                <div class="product-price">
+                  <span class="product-current-price">£20</span>
+                  <span class="product-deal-price">£20</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-3">
+            <div class="product-item">
+              <div class="product-img m-auto">
+                <img src="assets/images/product-images/3.png" class="img-fluid " alt="product-image">
+              </div>
+              <div class="product-badge">
+                <span class="badge">New</span>
+              </div>
+              <div class="product-action">
+                <ul>
+                  <li><a href="javascript:void(0)"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+
+              <div class="product-content">
+                <div class="product-rating">
+                  <ul>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star-half" aria-hidden="true"></i></li>
+                  </ul>
+                </div>
+                <div class="product-title">
+                  <a href="javascript:void(0)">organic mangoes 1KG</a>
+                </div>
+                <div class="product-price">
+                  <span class="product-current-price">£20</span>
+                  <span class="product-deal-price">£20</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-3">
+            <div class="product-item">
+              <div class="product-img m-auto">
+                <img src="assets/images/product-images/4.png" class="img-fluid " alt="product-image">
+              </div>
+              <div class="product-badge">
+                <span class="badge">New</span>
+              </div>
+              <div class="product-action">
+                <ul>
+                  <li><a href="javascript:void(0)"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+
+              <div class="product-content">
+                <div class="product-rating">
+                  <ul>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star-half" aria-hidden="true"></i></li>
+                  </ul>
+                </div>
+                <div class="product-title">
+                  <a href="javascript:void(0)">organic kiwi 1KG</a>
+                </div>
+                <div class="product-price">
+                  <span class="product-current-price">£20</span>
+                  <span class="product-deal-price">£20</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-6 col-md-3 col-lg-3">
+            <div class="product-item">
+              <div class="product-img m-auto">
+                <img src="assets/images/product-images/5.webp" class="img-fluid " alt="product-image">
+              </div>
+              <div class="product-badge">
+                <span class="badge">New</span>
+              </div>
+              <div class="product-action">
+                <ul>
+                  <li><a href="javascript:void(0)"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+
+              <div class="product-content">
+                <div class="product-rating">
+                  <ul>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star-half" aria-hidden="true"></i></li>
+                  </ul>
+                </div>
+                <div class="product-title">
+                  <a href="javascript:void(0)">Viridian Quercetin B5 Plus Complex 60 capsules</a>
+                </div>
+                <div class="product-price">
+                  <span class="product-current-price">£21.99</span>
+                  <span class="product-deal-price">£22.52</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-3">
+            <div class="product-item">
+              <div class="product-img m-auto">
+                <img src="assets/images/product-images/6.webp" class="img-fluid " alt="product-image">
+              </div>
+              <div class="product-badge">
+                <span class="badge">New</span>
+              </div>
+              <div class="product-action">
+                <ul>
+                  <li><a href="javascript:void(0)"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+
+              <div class="product-content">
+                <div class="product-rating">
+                  <ul>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star-half" aria-hidden="true"></i></li>
+                  </ul>
+                </div>
+                <div class="product-title">
+                  <a href="javascript:void(0)">Teapigs Liquorice & Mint 50 Bags</a>
+                </div>
+                <div class="product-price">
+                  <span class="product-current-price">£15.50</span>
+                  <span class="product-deal-price">£22.52</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-3">
+            <div class="product-item">
+              <div class="product-img m-auto">
+                <img src="assets/images/product-images/7.webp" class="img-fluid " alt="product-image">
+              </div>
+              <div class="product-badge">
+                <span class="badge">New</span>
+              </div>
+              <div class="product-action">
+                <ul>
+                  <li><a href="javascript:void(0)"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+
+              <div class="product-content">
+                <div class="product-rating">
+                  <ul>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star-half" aria-hidden="true"></i></li>
+                  </ul>
+                </div>
+                <div class="product-title">
+                  <a href="javascript:void(0)">Steens Monofloral Manuka Honey UMF10+ 340g</a>
+                </div>
+                <div class="product-price">
+                  <span class="product-current-price">£24.99</span>
+                  <span class="product-deal-price">£29.52</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-3">
+            <div class="product-item">
+              <div class="product-img m-auto">
+                <img src="assets/images/product-images/8.webp" class="img-fluid " alt="product-image">
+              </div>
+              <div class="product-badge">
+                <span class="badge">New</span>
+              </div>
+              <div class="product-action">
+                <ul>
+                  <li><a href="javascript:void(0)"><i class="fa fa-eye" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                  <li><a href="javascript:void(0)"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+
+              <div class="product-content">
+                <div class="product-rating">
+                  <ul>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-star-half" aria-hidden="true"></i></li>
+                  </ul>
+                </div>
+                <div class="product-title">
+                  <a href="javascript:void(0)">Alemany Forest Honey 500g</a>
+                </div>
+                <div class="product-price">
+                  <span class="product-current-price">£12.99</span>
+                  <span class="product-deal-price">£14.52</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <footer>
         <div class="container-fluid">
           <div class="row go-to-top-row">
